--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,8 +16,17 @@
         <h5>Routes Available</h5>
         <p>GET - <code>/student</code></p>
         <p>POST - <code>/student</code> - fields <code>name(string),dni(string),lastname(string),phone(string),birthday(date)</code></p>
-
+        <p>DELETE - <code>/student/:dni</code></p>
         <p>GET - <code>/student/:dni</code></p>
+        <hr />
+        <p>GET - <code>/teacher</code></p>
+        <p>POST - <code>/teacher</code> - fields <code>name(string),dni(string),lastname(string),email(string),password(string)</code></p>
+        <p>DELETE - <code>/teacher/:dni</code></p>
+        <hr />
+
+
+
+        
     </div>
 </body>
 </html>
