--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,20 +13,33 @@
     <div class="container">
         <h1>API CHATBOT 🤖</h1>
         <br />
-        <h5>Routes Available</h5>
+        <h5>Routes Available:</h5>
+        <h6>Student</h6>
         <p>GET - <code>/student</code></p>
         <p>POST - <code>/student</code> - fields <code>name(string),dni(string),lastname(string),phone(string),birthday(date)</code></p>
         <p>DELETE - <code>/student/:dni</code></p>
         <p>GET - <code>/student/:dni</code></p>
         <hr />
+        <h6>Teacher</h6>
         <p>GET - <code>/teacher</code></p>
         <p>POST - <code>/teacher</code> - fields <code>name(string),dni(string),lastname(string),email(string),password(string)</code></p>
         <p>DELETE - <code>/teacher/:dni</code></p>
         <hr />
+        <h6>Course</h6>
+        <p>GET - <code>/course</code></p>
 
+        <h6>Attendance</h6>
+        <p>GET - <code>/attendance</code></p>
 
+        <h6>Grade</h6>
+        <p>GET - <code>/grade</code></p>
 
-        
+        <h6>Homework</h6>
+        <p>GET - <code>/homework</code></p>
+
+        <h6>Meeting</h6>
+        <p>GET - <code>/meeting</code></p>
+
     </div>
 </body>
 </html>
