--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,6 +27,7 @@
         <hr />
         <h6>Course</h6>
         <p>GET - <code>/course</code></p>
+        <p>POST - <code>/course</code> -fields <code>name(string)</code></p>
 
         <h6>Attendance</h6>
         <p>GET - <code>/attendance</code></p>
